fix the listungen and adults page on mobile and descktop

--- a/src/styles/pages/leistungen/Adults.scss
+++ b/src/styles/pages/leistungen/Adults.scss
@@ -1,25 +1,23 @@
 @import "../../variables.scss";
 .adults-page-container {
   max-width: 100vw;
-  height: 100vh;
+  height: 100%;
   scroll-behavior: smooth;
   overflow: overlay;
   scroll-snap-type: y mandatory;
-  position: relative;
   .adults-first-container {
-    // scroll-snap-align: end;
     margin-top: 90px;
     width: 100%;
-    height: calc(100% - 90px);
+    height: calc(100vh - 90px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
   }
   .adults-treatment-container {
-    // scroll-snap-align: end;
+    
     width: 100%;
-    height: calc(100% - 90px);
+    height: calc(100vh - 90px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,14 +26,13 @@
   .adults-eight-container {
     // scroll-snap-align: end;
     width: 100%;
-    height: calc(100% - 90px);
+    height: calc(100vh - 90px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: $dark-blue;
-    position: absolute;
-    z-index: 100;
+    
   }
 }
 
@@ -45,13 +42,13 @@
     width: 100vw;
     height: 100%;
     .adults-first-container {
-      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
     }
     .adults-treatment-container {
-      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
     }
     .adults-eight-container {
-      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
     }
   }
 }
