--- a/src/styles/pages/leistungen/Leistungen.scss
+++ b/src/styles/pages/leistungen/Leistungen.scss
@@ -154,25 +154,27 @@
     width: 100vw;
     height: 100%;
     .first-container {
-      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
     }
     .secound-container {
       width: 100%;
-      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
       color: white;
       display: flex;
       flex-direction: column;
 
       .secound-left-container {
-        width: 100%;
-        height: 50%;
+          width: 100%;
+          height: 50%;
+          .adult-img{
+          background-size: cover;
+          background-position: center;
+          transition: all 0.5s ease;
+        &:hover {
         background-position: center;
         background-size: cover;
-        &:hover {
-          background-position: center;
-          transform: scale(1);
-          background-size: 150%;
         }
+      }
       }
       .secound-right-container {
         width: 100%;
@@ -212,7 +214,7 @@
     }
     .third-container {
       width: 100%;
-      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
       display: flex;
       flex-direction: column-reverse;
 
@@ -246,14 +248,13 @@
       .third-right-container {
         width: 100%;
         height: 50%;
-        background-image: url(../../../../public/imgs/kinder.jpg);
+        
         background-size: cover;
-        background-position: left;
+        background-position: center;
         transition: all 0.5s ease;
         &:hover {
-          transform: scale(1);
-          background-position: left;
-          background-size: 133%;
+          background-size: cover;
+          background-position: center;
         }
       }
     }
